# dynamixel-python

./: LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yaml  test.yaml
src/dxl2/: __init__.py  base.py  protocol_v1.py  protocol_v2.py  response.py  v1.py  v2.py
tests/: test_protocol_v1.py  test_protocol_v2.py  test_v1.py  test_v2.py
