[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "dynamixel-python"
authors = [
{ name="Chanhyuk Jung", email="seagullcjung@gmail.com" },
]
description = "A simple library for communicating with Dynamixel motors"
readme = "README.md"
dynamic = ["version"]
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3.8",
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
]
license = { text = "MIT" }
dependencies = [
    "pyserial"
]

[project.optional-dependencies]
test = ["pytest", "pytest-mock", "mock-serial ; sys_platform != 'win32'", "mypy"]

[tool.setuptools]
packages = [
    "dxl2",
]
package-dir = { "" = "src" }

[tool.setuptools.dynamic]
version = { attr = "dxl2.__version__" }

[tool.ruff]
target-version = "py38"
line-length = 88

[tool.ruff.lint]
select = [
    "E", "W",  # pycodestyle errors and warnings
    "F",       # PyFlakes
    "I",       # isort
    "B",       # flake8-bugbear (good practices, potential bugs)
    "C4",      # flake8-comprehensions (more concise comprehensions)
    "T20",     # flake8-print (discourage print statements in production code)
    "N",       # pep8-naming
    "UP",      # pyupgrade
    "SIM",     # flake8-simplify
    "A",       # flake8-builtins (shadowing builtins)
    "RUF",     # Ruff-specific rules
]
ignore = [
    "E501",  # Line too long
]

[tool.ruff.lint.isort]
known-first-party = ["dxl2"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true

[tool.mypy]
python_version = "3.8"
ignore_missing_imports = true
follow_imports = "skip"
